chore(pipelines): deploy separate frontend Tekton app
- Split ci-pipelines Application into backend and frontend instances with env-scoped naming
- Wire unique pipeline values (git repo, image destination, listeners) via umbrella values
- Update docs, tests, and automation scripts to reflect both pipeline apps

Refs: MIGR-008 follow-up

--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -13,3 +13,23 @@ targetRevision: main
 sampleAppImages:
   backend: quay.io/paulcapestany/toy-service
   frontend: quay.io/paulcapestany/toy-web
+
+pipelines:
+  backend:
+    pipelineName: bitiq-build-and-push
+    gitUrl: https://github.com/PaulCapestany/toy-service.git
+    gitRevision: main
+    imageRegistry: quay.io
+    imageNamespace: paulcapestany
+    imageName: toy-service
+    eventListener: bitiq-listener
+    githubSecretName: github-webhook-secret
+  frontend:
+    pipelineName: bitiq-web-build-and-push
+    gitUrl: https://github.com/PaulCapestany/toy-web.git
+    gitRevision: main
+    imageRegistry: quay.io
+    imageNamespace: paulcapestany
+    imageName: toy-web
+    eventListener: bitiq-web-listener
+    githubSecretName: github-webhook-secret
