--- a/charts/bitiq-umbrella/tests/ci_pipelines_backend_app_test.yaml
+++ b/charts/bitiq-umbrella/tests/ci_pipelines_backend_app_test.yaml
@@ -1,6 +1,6 @@
-suite: CI pipelines Application naming
+suite: CI pipelines backend Application naming
 templates:
-  - templates/app-ci-pipelines.yaml
+  - templates/app-ci-pipelines-backend.yaml
 release:
   name: umbrella
   namespace: openshift-gitops
@@ -11,7 +11,7 @@ assertions:
     asserts:
       - equal:
           path: metadata.name
-          value: ci-pipelines-prod
+          value: ci-pipelines-backend-prod
       - equal:
           path: metadata.labels["bitiq.io/env"]
           value: prod
