--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -24,6 +24,10 @@ pipelines:
     imageName: toy-service
     eventListener: bitiq-listener
     githubSecretName: github-webhook-secret
+    runTests: "true"
+    testImage: quay.io/devfile/golang:1.20
+    testScript: |
+      go test ./...
   frontend:
     pipelineName: bitiq-web-build-and-push
     gitUrl: https://github.com/PaulCapestany/toy-web.git
@@ -33,3 +37,8 @@ pipelines:
     imageName: toy-web
     eventListener: bitiq-web-listener
     githubSecretName: github-webhook-secret
+    runTests: "true"
+    testImage: quay.io/devfile/nodejs-developer:ubi8
+    testScript: |
+      npm ci
+      npm test -- --watch=false
