fix(pipelines): set HOME for compute-image-tag to avoid /.gitconfig permission error
- Set HOME=/tekton/home at container level so Tekton cred init writes to a writable path and git --global config succeeds
- Eliminates warnings about unsuccessful cred copy to /.docker and permission denied for //.gitconfig

No behavior change beyond fixing the step failure.

--- a/charts/ci-pipelines/templates/pipeline.yaml
+++ b/charts/ci-pipelines/templates/pipeline.yaml
@@ -70,10 +70,13 @@ spec:
         steps:
           - name: compute
             image: alpine/git:2.45.2
+            env:
+              - name: HOME
+                value: /tekton/home
             script: |
               #!/bin/sh
               set -eu
-              export HOME="${HOME:-/tekton/home}"
+              # Ensure HOME is writable for git and Tekton creds
               mkdir -p "$HOME"
               cd $(workspaces.source.path)
               git config --global --add safe.directory "$(workspaces.source.path)"
