fix(pipelines): set PipelineRun SA to pipeline
- Configure taskRunTemplate.serviceAccountName in PipelineRuns (manual + triggers)
- Add pipeline.serviceAccountName value with default to 'pipeline'

This ensures TaskRuns use the RBAC/SCC provided by the chart in openshift-pipelines, avoiding Pod admission issues that manifested as 'pods "...-run-tests-pod" not found'.

Affects: local env (openshift-pipelines)

--- a/charts/ci-pipelines/templates/triggers.yaml
+++ b/charts/ci-pipelines/templates/triggers.yaml
@@ -28,6 +28,7 @@ spec:
         namespace: openshift-pipelines
       spec:
         taskRunTemplate:
+          serviceAccountName: {{ .Values.pipeline.serviceAccountName }}
           podTemplate:
             securityContext:
               fsGroup: {{ .Values.pipeline.fsGroup }}
