--- a/charts/ci-pipelines/templates/pipelinerun-example.yaml
+++ b/charts/ci-pipelines/templates/pipelinerun-example.yaml
@@ -7,6 +7,7 @@ metadata:
     pipelinesascode.tekton.dev/on-target-branch: main
 spec:
   taskRunTemplate:
+    serviceAccountName: {{ .Values.pipeline.serviceAccountName }}
     podTemplate:
       securityContext:
         fsGroup: {{ .Values.pipeline.fsGroup }}
