fix(umbrella): use public Go test image
Switch backend tests to Red Hat UBI go-toolset tag that exists:
- testImage: registry.access.redhat.com/ubi9/go-toolset:1.20

Resolves ErrImagePull for quay.io/devfile/golang:1.20 (manifest unknown).

--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -25,7 +25,7 @@ pipelines:
     eventListener: bitiq-listener
     githubSecretName: github-webhook-secret
     runTests: "true"
-    testImage: quay.io/devfile/golang:1.20
+    testImage: registry.access.redhat.com/ubi9/go-toolset:1.20
     testScript: |
       go test ./...
   frontend:
