fix(pipelines): set HOME for run-tests to avoid cred copy and cache perms
- Set HOME=/tekton/home on tests step so Tekton copies creds to a writable path and tools like Go use a writable cache
- Mirrors compute-image-tag fix; prevents /opt/app-root/src permission errors

--- a/charts/ci-pipelines/templates/pipeline.yaml
+++ b/charts/ci-pipelines/templates/pipeline.yaml
@@ -109,9 +109,14 @@ spec:
         steps:
           - name: tests
             image: $(params.test-image)
+            env:
+              - name: HOME
+                value: /tekton/home
             script: |
               #!/bin/sh
               set -euo pipefail
+              # Ensure a writable HOME for creds and caches (Go, npm, etc.)
+              mkdir -p "$HOME"
               cd $(workspaces.source.path)
               $(params.test-script)
       params:
