--- a/charts/ci-pipelines/templates/pipeline.yaml
+++ b/charts/ci-pipelines/templates/pipeline.yaml
@@ -54,6 +54,9 @@ spec:
           value: $(params.git-url)
         - name: revision
           value: $(params.git-revision)
+        # Use full history so tag detection works reliably
+        - name: depth
+          value: "0"
         - name: deleteExisting
           value: "true"
       workspaces:
@@ -85,12 +88,24 @@ spec:
               echo "[compute-image-tag] workspace path: $(workspaces.source.path)"
               echo "[compute-image-tag] ref: $(git rev-parse --abbrev-ref HEAD 2>/dev/null || echo detached)"
 
-              EXACT_TAG=$(git describe --tags --exact-match 2>/dev/null || true)
+              # Ensure we have sufficient history + tags for describe
+              if [ -f .git/shallow ]; then
+                echo "[compute-image-tag] repository is shallow; unshallowing"
+                git fetch --unshallow --force
+              fi
+              echo "[compute-image-tag] fetching tags"
+              git fetch --tags --force --prune
+              echo "[compute-image-tag] available tags (last 20):"
+              git tag -l | tail -n 20 || true
+
+              # Prefer exact semver tag on HEAD if present
+              EXACT_TAG=$(git describe --tags --exact-match --match 'v[0-9]*.[0-9]*.[0-9]*' 2>/dev/null || true)
               if [ -n "$EXACT_TAG" ]; then
                 VER="$EXACT_TAG"
                 echo "[compute-image-tag] exact tag match found: $VER"
               else
-                VER=$(git describe --tags --abbrev=0 2>/dev/null || true)
+                # Find the closest reachable semver tag
+                VER=$(git describe --tags --abbrev=0 --match 'v[0-9]*.[0-9]*.[0-9]*' 2>/dev/null || true)
                 if [ -n "$VER" ]; then
                   echo "[compute-image-tag] using most recent tag: $VER"
                 else
@@ -104,7 +119,7 @@ spec:
 
               TAG="${VER}-commit.${SHA}"
               echo "[compute-image-tag] writing tag result: $TAG"
-              printf "%s" "$TAG" > /tekton/results/tag
+              printf "%s" "$TAG" > $(results.tag.path)
       workspaces:
         - name: source
           workspace: shared-workspace
