feat(umbrella,apps): env-based platform mapping for image-updater
- local -> linux/arm64; sno/prod -> linux/amd64 via ApplicationSet param
- parameterize platforms in sample-app annotations (backend/frontend)
- add optional pull-secret annotation for private registries

docs: document platform mapping and multi-arch helper
chore(scripts): add buildx multi-arch build helper

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -41,6 +41,8 @@ spec:
               value: {{ .Values.repoUrl | quote }}
             - name: targetRevision
               value: {{ .Values.targetRevision | quote }}
+            - name: imageUpdater.platforms
+              value: '{{ "{{ .platforms }}" }}'
       destination:
         server: '{{ "{{ .cluster }}" }}'
         namespace: '{{ "{{ .appNamespace }}" }}'
