--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -14,6 +14,7 @@ spec:
             cluster: {{ $e.clusterServer | quote }}
             baseDomain: {{ $e.baseDomain | quote }}
             appNamespace: {{ $e.appNamespace | quote }}
+            platforms: {{ $e.platforms | quote }}
 {{- end }}
 {{- end }}
   template:
