fix(umbrella): gate frontend image updates to avoid updater errors in local\n\n- Add imageUpdater.enableFrontend (default true)\n- Disable via ApplicationSet for env=local (enableFrontendImageUpdate=false)\n- Wrap frontend alias/annotations conditionally to prevent "frontend.image.tag parameter not found" and registry unauthorized errors\n- Docs: README + LOCAL-CI-CD note and re-enable instructions

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -42,8 +42,10 @@ spec:
               value: {{ .Values.repoUrl | quote }}
             - name: targetRevision
               value: {{ .Values.targetRevision | quote }}
-            - name: imageUpdater.platforms
-              value: '{{ "{{ .platforms }}" }}'
+          - name: imageUpdater.platforms
+            value: '{{ "{{ .platforms }}" }}'
+            - name: imageUpdater.enableFrontend
+              value: '{{ "{{ .enableFrontendImageUpdate | default true }}" }}'
       destination:
         server: '{{ "{{ .cluster }}" }}'
         namespace: '{{ "{{ .appNamespace }}" }}'
