--- a/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
+++ b/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
@@ -8,21 +8,31 @@ metadata:
     app.kubernetes.io/part-of: bitiq-umbrella
   annotations:
     # Tell Image Updater what image to track and how to write back to Helm values
-    argocd-image-updater.argoproj.io/image-list: backend={{ .Values.sampleAppImages.backend }},frontend={{ .Values.sampleAppImages.frontend }}
+    argocd-image-updater.argoproj.io/image-list: backend={{ .Values.sampleAppImages.backend }}{{- if .Values.imageUpdater.enableFrontend }},frontend={{ .Values.sampleAppImages.frontend }}{{- end }}
     argocd-image-updater.argoproj.io/backend.update-strategy: newest-build
+    {{- if .Values.imageUpdater.enableFrontend }}
     argocd-image-updater.argoproj.io/frontend.update-strategy: newest-build
+    {{- end }}
     argocd-image-updater.argoproj.io/backend.platforms: {{ .Values.imageUpdater.platforms | default "linux/amd64" }}
+    {{- if .Values.imageUpdater.enableFrontend }}
     argocd-image-updater.argoproj.io/frontend.platforms: {{ .Values.imageUpdater.platforms | default "linux/amd64" }}
+    {{- end }}
     {{- if .Values.imageUpdater.pullSecret }}
     argocd-image-updater.argoproj.io/backend.pull-secret: {{ .Values.imageUpdater.pullSecret | quote }}
+    {{- if .Values.imageUpdater.enableFrontend }}
     argocd-image-updater.argoproj.io/frontend.pull-secret: {{ .Values.imageUpdater.pullSecret | quote }}
+    {{- end }}
     {{- end }}
     argocd-image-updater.argoproj.io/backend.helm.image-name: backend.image.repository
     argocd-image-updater.argoproj.io/backend.helm.image-tag: backend.image.tag
+    {{- if .Values.imageUpdater.enableFrontend }}
     argocd-image-updater.argoproj.io/frontend.helm.image-name: frontend.image.repository
     argocd-image-updater.argoproj.io/frontend.helm.image-tag: frontend.image.tag
+    {{- end }}
     argocd-image-updater.argoproj.io/backend.allow-tags: "regexp:^v\\d+\\.\\d+\\.\\d+-commit\\.[0-9a-f]{7,}$"
+    {{- if .Values.imageUpdater.enableFrontend }}
     argocd-image-updater.argoproj.io/frontend.allow-tags: "regexp:^v\\d+\\.\\d+\\.\\d+-commit\\.[0-9a-f]{7,}$"
+    {{- end }}
     argocd-image-updater.argoproj.io/write-back-method: git
     argocd-image-updater.argoproj.io/write-back-target: helmvalues:/charts/bitiq-sample-app/values-{{ .Values.env }}.yaml
     argocd-image-updater.argoproj.io/git-branch: {{ .Values.targetRevision }}
