--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -58,7 +58,7 @@ ciPipelines:
       tlsVerify: "true"
       repoFullName: PaulCapestany/toy-web
       runTests: "true"
-      testImage: quay.io/devfile/nodejs-developer:ubi8
+      testImage: registry.access.redhat.com/ubi9/nodejs-20:1-1758500456
       testScript: |
         npm ci
         npm test -- --watch=false
