fix(ci-pipelines): prefer explicit jest config when present

--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -65,4 +65,8 @@ ciPipelines:
         else
           npm install
         fi
-        npm test -- --watch=false
+        if [ -f jest.config.js ]; then
+          npm test -- --config=jest.config.js --watch=false
+        else
+          npm test -- --watch=false
+        fi
